k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk004-stock-api
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk004-stock-api
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: 371460792541b8e16b54898d473ad66e
      labels:
        app: sk004-stock-api
    spec:
      serviceAccountName: default
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: control-plane
                operator: In
                values:
                - "amdp"
      containers:
      - name: stock-api
        image: amdp-registry.skala-ai.com/skala25a/sk004-stock-api@sha256:4b4aaff0ae185b2bf80a004d06c322315a3f55e47b8592881954fe8fe1ec097f
      tolerations:
      - effect: 
        key: control-plane
        operator: Equal
        value: "amdp"
