k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sk004-stock-api
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  rules:
  - host: springboot.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: sk004-stock-api
            port:
              number: 8080
        path: /swagger
        pathType: Prefix
  tls:
  - hosts:
    - '*.skala25a.project.skala-ai.com'
    secretName: skala25-project-tls-cert
